Recrate the navbar

--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
             <div class="col-11">
 
                 <nav class="navbar navbar-expand-lg navbar-light mt-3" style="background-color: transparent;">
-                    <div class="container-fluid">
+                    <div class="container-fluid ">
                         <a class="navbar-brand" href="#">FOLD.</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false"
                             aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <div class="collapse navbar-collapse" id="navbarText">
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                <li class="nav-item"><a href="" class="nav-link">Home</a></li>
-                                <li class="nav-item"><a href="" class="nav-link">Features</a></li>
-                                <li class="nav-item"><a href="" class="nav-link">Pricing</a></li>
+                        <div class="collapse navbar-collapse " id="navbarText">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0" >
+                                <li class="nav-item d-flex justify-content-center" ><a href="" class="nav-link">Home</a></li>
+                                <li class="nav-item d-flex justify-content-center"><a href="" class="nav-link">Features</a></li>
+                                <li class="nav-item d-flex justify-content-center"><a href="" class="nav-link">Pricing</a></li>
 
-                                <li class="nav-item"><a href="" class="nav-link">Reviews</a></li>
-                                <li class="nav-item"><a href="" class="nav-link">Sign Up</a></li>
+                                <li class="nav-item d-flex justify-content-center"><a href="" class="nav-link">Reviews</a></li>
+                                <li class="nav-item d-flex justify-content-center"><a href="" class="nav-link">Sign Up</a></li>
                             </ul>
-                            <button type="button" class="btn btn-primary px-5 rounded-pill">
+                            <button type="button" class="btn btn-primary px-5 rounded-pill ">
                                 Download
                             </button>
 
