--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
                                 <li class="nav-item d-flex justify-content-center"><a href="" class="nav-link">Reviews</a></li>
                                 <li class="nav-item d-flex justify-content-center"><a href="" class="nav-link">Sign Up</a></li>
                             </ul>
-                            <button type="button" class="btn btn-primary px-5 rounded-pill ">
-                                Download
-                            </button>
+                            <div class=" d-flex justify-content-center">
+                                <button type="button" class="btn btn-primary px-5 rounded-pill ">
+                                    Download
+                                </button>
+                            </div>
+                            
 
                         </div>
                     </div>
