--- a/index.html
+++ b/index.html
@@ -1,203 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css"
-      integrity="sha512-Oy+sz5W86PK0ZIkawrG0iv7XwWhYecM3exvUtMKNJMekGFJtVAhibhRPTpmyTj8+lJCkmWfnpxKgT2OopquBHA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css"
+        integrity="sha512-Oy+sz5W86PK0ZIkawrG0iv7XwWhYecM3exvUtMKNJMekGFJtVAhibhRPTpmyTj8+lJCkmWfnpxKgT2OopquBHA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="stylesheet" href="style.css" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+   
+</head>
 
-  <body>
+<body>
     <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-11">
-          <nav
-            class="navbar navbar-expand-lg navbar-light mt-3"
-            style="background-color: transparent"
-          >
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">FOLD.</a>
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarText"
-                aria-controls="navbarText"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item d-flex justify-content-center">
-                    <a href="" class="nav-link">Home</a>
-                  </li>
-                  <li class="nav-item d-flex justify-content-center">
-                    <a href="" class="nav-link">Features</a>
-                  </li>
-                  <li class="nav-item d-flex justify-content-center">
-                    <a href="" class="nav-link">Pricing</a>
-                  </li>
+        <div class="row justify-content-center">
+            <div class="col-11">
+                <nav class="navbar navbar-expand-lg navbar-light mt-3" style="background-color: transparent">
+                    <div class="container-fluid font-mont">
+                        <a class="navbar-brand" href="#">FOLD.</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarText">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item d-flex justify-content-center">
+                                    <a href="" class="nav-link">Home</a>
+                                </li>
+                                <li class="nav-item d-flex justify-content-center">
+                                    <a href="" class="nav-link">Features</a>
+                                </li>
+                                <li class="nav-item d-flex justify-content-center">
+                                    <a href="" class="nav-link">Pricing</a>
+                                </li>
 
-                  <li class="nav-item d-flex justify-content-center">
-                    <a href="" class="nav-link">Reviews</a>
-                  </li>
-                  <li class="nav-item d-flex justify-content-center">
-                    <a href="" class="nav-link">Sign Up</a>
-                  </li>
-                </ul>
-                <div class="d-flex justify-content-center">
-                  <button
-                    type="button"
-                    class="btn btn-primary px-5 rounded-pill"
-                  >
-                    Download
-                  </button>
-                </div>
-              </div>
+                                <li class="nav-item d-flex justify-content-center">
+                                    <a href="" class="nav-link">Reviews</a>
+                                </li>
+                                <li class="nav-item d-flex justify-content-center">
+                                    <a href="" class="nav-link">Sign Up</a>
+                                </li>
+                            </ul>
+                            <div class="d-flex justify-content-center">
+                                <button type="button" class="btn btn-primary px-5 rounded-pill">
+                                    Download
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
             </div>
-          </nav>
         </div>
-      </div>
     </div>
 
     <div class="container-fluid">
-      <div class="row">
-        <div class="col back" >
-          <div class="container">
-            <div class="row justify-content-center">
-              <div class="col-11 py-5">
-                <div class="content rounded-1">
-                  <button type="button" class="btn btn-primary btn-sm">
-                    New
-                  </button>
-                  Introducing Live Data Maps
+        <div class="row">
+            <div class="col back">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-11 py-5">
+                            <div class="content rounded-1">
+                                <button type="button" class="btn btn-primary btn-sm">
+                                    New
+                                </button>
+                                Introducing Live Data Maps
+                            </div>
+                            <div class="content-2">
+                                Data analytics and advanced <br />
+                                Neural networks.
+                            </div>
+                            <div class="content-3">
+                                Military grade infrastructure and technology beyond today.
+                            </div>
+                            <div class="content-4">
+                                <button type="button" class="btn btn-primary px-5 rounded-pill">
+                                    Get Started
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="content-2">
-                  Data analytics and advanced <br />
-                  Neural networks.
-                </div>
-                <div class="content-3">
-                  Military grade infrastructure and technology beyond today.
-                </div>
-                <div class="content-4">
-                  <button
-                    type="button"
-                    class="btn btn-primary px-5 rounded-pill"
-                  >
-                    Get Started
-                  </button>
-                </div>
-              </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
 
     <div class="container mt-5">
-      <div class="row justify-content-center">
-        <div class="col-lg-6 col-10">
-          <div class="big_text">Build better landing pages</div>
-          <div class="text_normal">
-            When you get staright to the point the presentation looks attractive
-            on your web pages. Keep it simple and clean always.
-          </div>
+        <div class="row justify-content-center">
+            <div class="col-lg-6 col-10">
+                <div class="big_text">Build better landing pages</div>
+                <div class="text_normal">
+                    When you get staright to the point the presentation looks attractive
+                    on your web pages. Keep it simple and clean always.
+                </div>
+            </div>
         </div>
-      </div>
     </div>
 
     <div class="container mt-5">
-      <div class="row justify-content-center">
-        <div class="col-lg-3">
-          <div class="image d-flex justify-content-center">
-            <img
-              src="feature1.png"
-              class="img-fluid"
-              alt="feature1"
-              width="400px"
-            />
-          </div>
+        <div class="row justify-content-center">
+            <div class="col-lg-5">
+                <div class="image d-flex justify-content-center">
+                    <img src="feature1.png" class="img-fluid" alt="feature1" width="400px" />
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-9 col-12 pt-5 ps-5">
+                <div class="text_content mt-5 ms-3">
+                    <button type="button" class="btn btn-primary rounded-circle">
+                        1
+                    </button>
+                    <br />
+                    <span class="chart_text"> Custom charts. </span>
+                    <br />
+                    <span class="chart_text_normal">
+                        When you get staright to the point the presentation looks
+                        attractive on your web pages.
+                    </span>
+                    <br /><br />
+                    <span class="link-ssd">
+                        <a href="">Know more</a>
+                    </span>
+                </div>
+            </div>
         </div>
-        <div class="col-lg-3 col-md-6 col-sm-9 col-12 pt-5 ps-5">
-          <div class="text_content mt-5 ms-3">
-            <button type="button" class="btn btn-primary rounded-circle">
-              1
-            </button>
-            <br />
-            <span class="chart_text"> Custom charts. </span>
-            <br />
-            <span class="chart_text_normal">
-              When you get staright to the point the presentation looks
-              attractive on your web pages.
-            </span>
-            <br /><br />
-            <span class="link-ssd">
-              <a href="">Know more</a>
-            </span>
-          </div>
-        </div>
-      </div>
     </div>
     <div class="container mt-5">
-      <div class="row flex-row-reverse justify-content-center">
-        <div class="col-lg-3">
-          <div class="image d-flex justify-content-center">
-            <img
-              src="feature2.png"
-              class="img-fluid"
-              alt="feature1"
-              width="400px"
-            />
-          </div>
-        </div>
+        <div class="row flex-row-reverse justify-content-center">
+            <div class="col-lg-5">
+                <div class="image d-flex justify-content-center">
+                    <img src="feature2.png" class="img-fluid" alt="feature1" width="400px" />
+                </div>
+            </div>
 
-        <div class="col-lg-3 col-md-6 col-sm-9 col-12 pt-5 ps-5">
-          <div class="text_content mt-5 ms-3">
-            <button type="button" class="btn btn-primary rounded-circle">
-              1
-            </button>
-            <br />
-            <span class="chart_text"> Data Analytics. </span>
-            <br />
-            <span class="chart_text_normal">
-              When you get staright to the point the presentation looks
-              attractive on your web pages.
-            </span>
-            <br /><br />
-            <span class="link-ssd">
-              <a href="">Know more</a>
-            </span>
-          </div>
+            <div class="col-lg-3 col-md-6 col-sm-9 col-12 pt-5 ps-5">
+                <div class="text_content mt-5 ms-3">
+                    <button type="button" class="btn btn-primary btn-color rounded-circle">
+                        2
+                    </button>
+                    <br />
+                    <span class="chart_text"> Data Analytics. </span>
+                    <br />
+                    <span class="chart_text_normal">
+                        When you get staright to the point the presentation looks
+                        attractive on your web pages.
+                    </span>
+                    <br /><br />
+                    <span class="link-ssd">
+                        <a href="">Know more</a>
+                    </span>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    <div class="container-fluid mt-lg-0 mt-5 back-2">
+
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-4">
+                    <img src="dead.gif" class="img-fluid" alt="">
+                </div>
+
+           
+            <div class="col-lg-5  col-md-7 col-sm-9 col-12 ms-5 pt-5">
+                <span class="data ">DATA ANALYTICS</span>
+                <br><br>
+                <span class="custom">Custom Landing Pages</span>
+                <br><br>
+                <span class="just_text">Just to justify the above heading some blah blah text needs to be placed here to make it look good. Necessary, isn't it?
+
+                </span>
+                <br><br>
+                <button type="button" class="btn btn-primary px-5 rounded-pill">
+                    Know more
+                </button>
+            </div>
+        </div>
+        </div>
+    </div>
+
+
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
