--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500;600&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -185,6 +186,70 @@
             </div>
         </div>
         </div>
+    </div>
+
+
+    <div class="container-fluid back-3">
+
+        <div class="container">
+
+            <div class="row justify-content-lg-evenly justify-content-center">
+                <div class="col-lg-4 col-md-7 col-sm-9 col-12 py-5 px-5">
+                    <div class="mobile">
+                        Mobile Intergration
+                    </div>
+                    <div class="mobile_text">
+
+                        Grow your business with our secure storage, powerful computing, and integrated analytics at affordable price.
+
+                    </div>
+                    <br>
+                    <button type="button" class="btn btn-primary btn-color px-4 py-2 rounded-pill ">
+                        GET STARTED
+                    </button>
+                </div>
+                <div class="col-lg-5  col-md-9 col-sm-9 col-12 py-5 px-5">
+                    <div class="d-flex">
+                        <div class="text-center font-color border-light-css">
+                            <i class="fa-solid fa-mobile" style="color: rgb(35,210,210); font-size: 55px;"> </i>
+                            <br>
+                            Go Mobile
+                            <br>
+                            Some lorem ipsum text filler lorem ipsum text
+                        </div>
+                        <div class="text-center font-color border-light-css">
+                            <i class="fa-solid fa-video-camera"     style="color: rgb(35,210,210); font-size: 55px;"> </i>
+                            <br>
+                            Video
+                            <br>
+                            Some lorem ipsum text filler lorem ipsum text
+                        </div>
+
+                    </div>
+                    <div class="d-flex">
+                        <div class="text-center font-color border-light-css">
+                            <i class="fa-solid fa-location-dot" style="color: rgb(35,210,210); font-size: 55px;"> </i>
+                            <br>
+                            Asset tracker
+                            <br>
+                            Some lorem ipsum text filler lorem ipsum text
+                        </div>
+                        <div class="text-center font-color border-light-css">
+                            <i class="fa-solid fa-message" style="color: rgb(35,210,210); font-size: 55px;"> </i>
+                            <br>
+                            Profiling
+                            <br>
+                            Some lorem ipsum text filler lorem ipsum text
+                        </div>
+
+                    </div>
+                  
+                    
+                </div>
+            </div>
+
+        </div>
+
     </div>
 
 
