--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                             <i class="fa-solid fa-circle-check" style="color:rgb(35,210,210) ;"></i>
                             Live Assert Tracking
                           </span><br>
-                          <button type="button" class="btn btn-primary px-5 rounded-pill mt-3">
+                          <button type="button" class="btn btn-primary rounded-pill mt-3">
                             Buy Now
                         </button>
                     </div>
