--- a/index.html
+++ b/index.html
@@ -288,6 +288,17 @@
       </div>
   </div>
 
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-6 col-10">
+            <div class="big_text">Our Pricing Plans.</div>
+            <div class="text_normal">
+                Our plans are designed to meet the requirements of both beginners and players. Get the right plan that suits you.   
+            </div>
+        </div>
+    </div>
+</div>
+
 
     <div class="container py-5">
 
@@ -374,8 +385,6 @@
                 </div>
         </div>
         </div>
-
-
     </div>
 
 
