--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
              
           </div>
 
-          <div class="col-lg-4 col-md-9 col-sm-9 col-10 px-3 mt-sm-5">
+          <div class="col-lg-4 col-md-9 col-sm-9 col-10 px-3 mt-sm-0 mt-5">
            <img src="feature4.png"  class="img-fluid" alt="">
         </div>
 
